@@ -2,6 +2,7 @@ version 1.1-rc0 .. -..-2012
 . [FIX] CCAnimation: bug in addFrames that resulted in incorrect delayPerUnit (issue #1341)
 . [FIX] CCSprite: CCSprite bug in setDisplayFrameWithAnimationName
 . [FIX] CCParticleSystemQuad: Changed animation property to particleAnimation, for compiler warning
+. [FIX] CCTouchDispatcher: fixed crash after showing UIAlertView (issue #1279)
 
 version 1.1-beta2b 14-Mar-2012
 . [FIX] CCUtils: missing method declaration
